# options

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
data/: README.md
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: BENCHMARKING.md  BINOMIAL_TREE.md  BLACK_SCHOLES_VALIDATION.md  HISTORICAL_DATA.md  HISTORICAL_RESEARCH.md  MONTE_CARLO.md  README.md  RESEARCH_FINAL_SYNTHESIS.md  RESEARCH_M1_IV_PREDICTS_RV.md  RESEARCH_M2_SMILE_FORECASTING.md  RESEARCH_M3_OPTION_RETURN_PREDICTABILITY.md  RESEARCH_M4_HIGHER_ORDER_GREEKS.md  RESEARCH_M5_GREEK_INFORMATION.md  RESEARCH_M6_SURFACE_GEOMETRY.md  RESEARCH_M7_SURFACE_DYNAMICS.md  RESEARCH_M8_INFORMATION_PROPAGATION.md  SPY_2020_CALIBRATION_STUDY.md  VOLATILITY_ANALYTICS.md  csv_schema.md
docs/figures/research_m1_iv_rv/: README.md  regression_results.csv  summary_stats.json
docs/figures/research_m2_smile/: README.md  m2_feature_correlation.csv  m2_regression_results.csv  m2_vif.csv  summary_stats.json
docs/figures/research_m3_returns/: README.md  m3_regression_results.csv  summary_stats.json
docs/figures/research_m4_greeks/: README.md  m4_greek_correlation.csv  summary_stats.json
docs/figures/research_m5_greeks/: README.md  summary_stats.json
docs/figures/research_m6_geometry/: README.md  summary_stats.json
docs/figures/research_m7_dynamics/: README.md  summary_stats.json
docs/figures/research_m8_propagation/: README.md  summary_stats.json
docs/figures/spy_2020_calibration/: README.md  summary_stats.json
examples/: CMakeLists.txt  README.md  benchmark_all_engines.cpp  binomial_convergence.cpp  historical_calibration.cpp  historical_research.cpp  load_historical_dataset.cpp  monte_carlo_convergence.cpp
include/ore/: version.hpp
include/ore/analytics/: analytics.hpp  option_chain_calibrator.hpp  volatility_analytics.hpp
include/ore/benchmark/: benchmark.hpp  benchmark_case.hpp  benchmark_runner.hpp
include/ore/core/: market_snapshot.hpp  option.hpp  option_chain.hpp  option_market_snapshot.hpp  provider_greeks.hpp  quote.hpp  types.hpp  underlying.hpp
include/ore/io/: csv_reader.hpp
include/ore/marketdata/: eod_options_loader.hpp  historical_dataset.hpp  historical_loader.hpp  historical_snapshot.hpp  yahoo_option_loader.hpp
include/ore/numerics/: bisection.hpp  comparison.hpp  constants.hpp  newton_raphson.hpp  normal_distribution.hpp  numerics.hpp  random_number_generator.hpp  solver_result.hpp
include/ore/portfolio/: portfolio.hpp
include/ore/pricing/: binomial_tree_engine.hpp  black_scholes_engine.hpp  greeks.hpp  implied_volatility_solver.hpp  monte_carlo_engine.hpp  pricing_engine.hpp  pricing_result.hpp
include/ore/research/: greeks_validation_study.hpp  historical_calibration_study.hpp  historical_research_engine.hpp  iv_validation_study.hpp  pricing_validation_study.hpp  research.hpp  research_context.hpp  research_csv.hpp  research_report.hpp  research_study.hpp
include/ore/utils/: .gitkeep
python/: README.md  build_iv_rv_dataset.py  build_m2_features.py  build_m3_calib.py  build_m4_greeks_panel.py  build_m6_surface_panel.py  build_m8_quotes.py  calibration_research.py  download_historical_data.py  download_option_chain.py  download_stock_history.py  greek_information_study.py  greeks_empirical_study.py  higher_order_greeks.py  iv_rv_study.py  iv_smile_forecast_study.py  option_return_predictability.py  plot_accuracy.py  plot_convergence.py  plot_greek_error.py  plot_greeks.py  plot_iv_error.py  plot_pricing_error.py  plot_runtime.py  plot_runtime_history.py  plot_smile.py  plot_surface.py  plot_term_structure.py  requirements.txt  surface_dynamics_study.py  surface_geometry_study.py  surface_propagation_study.py
src/: CMakeLists.txt  version.cpp
src/analytics/: option_chain_calibrator.cpp  volatility_analytics.cpp
src/benchmark/: benchmark_case.cpp  benchmark_runner.cpp
src/io/: csv_reader.cpp
src/marketdata/: eod_options_loader.cpp  historical_dataset.cpp  historical_loader.cpp  yahoo_option_loader.cpp
src/numerics/: normal_distribution.cpp  random_number_generator.cpp
src/pricing/: binomial_tree_engine.cpp  black_scholes_engine.cpp  implied_volatility_solver.cpp  monte_carlo_engine.cpp
src/research/: greeks_validation_study.cpp  historical_calibration_study.cpp  historical_research_engine.cpp  iv_validation_study.cpp  pricing_validation_study.cpp  research_csv.cpp  research_report.cpp
tests/: CMakeLists.txt  test_version.cpp
tests/analytics/: .gitkeep  test_option_chain_calibrator.cpp  test_volatility_analytics.cpp
tests/benchmark/: test_benchmark.cpp
tests/core/: test_option.cpp  test_option_chain.cpp  test_option_market_snapshot.cpp  test_underlying.cpp
tests/fixtures/marketdata/SPY/options/2026-07-08/: calls.csv  metadata.csv  puts.csv
tests/fixtures/marketdata/historical/SPY/: README.txt
tests/fixtures/marketdata/historical/SPY/2024-01-02/: calls.csv  metadata.csv  puts.csv
tests/fixtures/marketdata/historical/SPY/2024-01-03/: calls.csv  metadata.csv  puts.csv
tests/fixtures/marketdata/historical/SPY/2024-01-04/: calls.csv  metadata.csv  puts.csv
tests/fixtures/marketdata/historical/SPY/not_a_date_dir/: placeholder.txt
tests/io/: test_csv_reader.cpp
tests/marketdata/: test_eod_options_loader.cpp  test_historical_loader.cpp  test_yahoo_option_loader.cpp
tests/numerics/: test_bisection.cpp  test_comparison.cpp  test_constants.cpp  test_newton_raphson.cpp  test_normal_distribution.cpp  test_random_number_generator.cpp
tests/pricing/: README.md  test_binomial_tree_engine.cpp  test_black_scholes.cpp  test_implied_volatility.cpp  test_monte_carlo_engine.cpp
tests/research/: research_test_helpers.hpp  test_greeks_validation_study.cpp  test_historical_dataset_extensions.cpp  test_iv_validation_study.cpp  test_pricing_validation_study.cpp  test_research_engine.cpp
tests/utils/: .gitkeep
